--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>chatGPT-Anywhere</title>
   </head>
   <body>
+    <a class="github-fork-ribbon hidden-in-mobile" href="https://github.com/yilihjy/chatgpt-anywhere" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
